bin/tests/errors/parser/parser_err_switch_missing_case.swg
#global fileprivate

func bad(a: s32)
{
    switch a { } // swc-expected-error {{parser_err_switch_missing_case}}
}
